Ajoute un slider générique dans mutualized-step

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -304,6 +304,12 @@
   text-indent: 5px;
 }
 
+.fr-input-slider {
+  background: var(--background-disabled-grey);
+  border-radius: 10px;
+
+}
+
 .fr-radio-group label {
   min-height: 50px !important;
 }
