update: ajoute des espaces insécables avant les points d'exclamation (#3501)

--- a/backend/lib/mes-aides/emails/templates/benefit-action.mjml
+++ b/backend/lib/mes-aides/emails/templates/benefit-action.mjml
@@ -33,9 +33,9 @@
             <span
               >Nous aimerions savoir si cette simulation vous a été utile, et si
               elle vous a permis de demander voire de bénéficier de nouvelles
-              aides : cela nous permettra de continuer à améliorer le simulateur
-              !</span
-            >
+              aides : cela nous permettra de continuer à améliorer le
+              simulateur !
+            </span>
           </p>
         </mj-text>
       </mj-column>
