--- a/backend/lib/mes-aides/emails/templates/simulation-results.mjml
+++ b/backend/lib/mes-aides/emails/templates/simulation-results.mjml
@@ -5,24 +5,7 @@
     </mj-attributes>
   </mj-head>
   <mj-body background-color="#F8F8F8">
-    <mj-section padding="0px 24px">
-      <mj-group>
-        <mj-column>
-          <mj-image
-            padding-left="0px"
-            alt="Logo Marianne de la République Française"
-            src="{{&baseURL}}/img/logo_rf.png"
-          />
-        </mj-column>
-        <mj-column>
-          <mj-image
-            padding-right="0px"
-            alt="Logo de 1jeune1solution.gouv.fr"
-            src="{{&baseURL}}/img/logo1j1s-france-relance.png"
-          />
-        </mj-column>
-      </mj-group>
-    </mj-section>
+    {{> header}}
     <mj-section padding="0px 24px">
       <mj-column>
         <mj-text padding="0px">
@@ -110,37 +93,6 @@
         />
       </mj-column>
     </mj-section>
-    <mj-section padding="0px 24px">
-      <mj-column padding="0px">
-        <mj-text padding="0px">
-          <span
-            >Retrouvez les détails de votre simulation en cliquant
-            <a href="{{&returnURL}}" target="_blank">ici</a>.
-          </span>
-          <br />
-          <span
-            >Nous améliorons ce simulateur en continu, et vous pouvez nous y
-            aider.
-          </span>
-          <br />
-          <span
-            >Vous pouvez toujours nous contacter à l'adresse suivante :
-            <a href="mailto:aides-jeunes@beta.gouv.fr"
-              >aides-jeunes@beta.gouv.fr</a
-            >
-          </span>
-        </mj-text>
-        <mj-text padding="16px 0px">
-          <span>Bonne journée,</span>
-          <br />
-          <span
-            >L'équipe du
-            <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
-              >simulateur de 1jeune1solution.gouv.fr</a
-            >
-          </span>
-        </mj-text>
-      </mj-column>
-    </mj-section>
+    {{> footer}}}
   </mj-body>
 </mjml>
