--- a/backend/lib/mes-aides/emails/templates/simulation-results.mjml
+++ b/backend/lib/mes-aides/emails/templates/simulation-results.mjml
@@ -35,7 +35,7 @@
           </mj-column>
           <mj-column vertical-align="middle" width="60%">
             <mj-text align="left" padding="0px 16px">
-              <strong>{{droitLabel}}</strong>
+              <strong>{{benefitLabel}}</strong>
             </mj-text>
           </mj-column>
           <mj-column vertical-align="middle" width="20%">
