--- a/backend/lib/mes-aides/emails/templates/benefit-action.mjml
+++ b/backend/lib/mes-aides/emails/templates/benefit-action.mjml
@@ -1,43 +1,31 @@
-<mjml>
-  <mj-head>
-    <mj-attributes>
-      <mj-text color="#555" line-height="22px" font-size="14px" />
-    </mj-attributes>
-  </mj-head>
-  <mj-body>
-    {{> header}}
-    <mj-section>
-      <mj-column>
-        <mj-text>
-          <p>
-            <span
-              >Vous avez fait il y a quelques jours une simulation sur
-              <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
-                >1jeune1solution.gouv.fr</a
-              >.</span
-            >
-            <br />
-            <span
-              >Nous aimerions savoir si cette simulation vous a été utile, et si
-              elle vous a permis de demander voire de bénéficier de nouvelles
-              aides : cela nous permettra de continuer à améliorer le
-              simulateur !
-            </span>
-          </p>
-        </mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section>
-      <mj-column>
-        <mj-text>
-          Pour cela nous avons préparé le formulaire suivant que vous pouvez
-          remplir en moins de 30 secondes
-        </mj-text>
-        <mj-button background-color="#5770be" color="white" href="{{&ctaLink}}">
-          Répondre au questionnaire
-        </mj-button>
-      </mj-column>
-    </mj-section>
-    {{> footer}}}
-  </mj-body>
-</mjml>
+<mj-section>
+  <mj-column>
+    <mj-text>
+      <p>
+        <span
+          >Vous avez fait il y a quelques jours une simulation sur
+          <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
+            >1jeune1solution.gouv.fr</a
+          >.</span
+        >
+        <br />
+        <span
+          >Nous aimerions savoir si cette simulation vous a été utile, et si
+          elle vous a permis de demander voire de bénéficier de nouvelles
+          aides : cela nous permettra de continuer à améliorer le simulateur !
+        </span>
+      </p>
+    </mj-text>
+  </mj-column>
+</mj-section>
+<mj-section>
+  <mj-column>
+    <mj-text>
+      Pour cela nous avons préparé le formulaire suivant que vous pouvez remplir
+      en moins de 30 secondes
+    </mj-text>
+    <mj-button background-color="#5770be" color="white" href="{{&ctaLink}}">
+      Répondre au questionnaire
+    </mj-button>
+  </mj-column>
+</mj-section>
