--- a/backend/lib/mes-aides/emails/templates/simulation-usefulness.mjml
+++ b/backend/lib/mes-aides/emails/templates/simulation-usefulness.mjml
@@ -1,59 +1,47 @@
-<mjml>
-  <mj-head>
-    <mj-attributes>
-      <mj-text color="#555" line-height="22px" font-size="14px" />
-    </mj-attributes>
-  </mj-head>
-  <mj-body>
-    {{> header}}
-    <mj-section>
-      <mj-column>
-        <mj-text>
-          <p align="justify">
-            <span
-              >Vous avez fait il y a quelques jours une simulation sur
-              <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
-                >1jeune1solution.gouv.fr</a
-              >.</span
-            >
-            <br />
-            <span
-              >Nous aimerions savoir si cette simulation vous a été utile, et si
-              elle vous a permis de demander voire de bénéficier de nouvelles
-              aides : cela nous permettra de continuer à améliorer le
-              simulateur !
-            </span>
-          </p>
-        </mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section>
-      <mj-text align="center" font-size="20px">
-        Votre simulation a-t-elle été utile ?
-      </mj-text>
-    </mj-section>
-    <mj-section>
-      <mj-column align="center">
-        <mj-button
-          width="130px"
-          background-color="#5770be"
-          color="white"
-          href="{{&wasUsefulLinkYes}}"
+<mj-section>
+  <mj-column>
+    <mj-text>
+      <p align="justify">
+        <span
+          >Vous avez fait il y a quelques jours une simulation sur
+          <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
+            >1jeune1solution.gouv.fr</a
+          >.</span
         >
-          Oui
-        </mj-button>
-      </mj-column>
-      <mj-column>
-        <mj-button
-          width="130px"
-          background-color="#5770be"
-          color="white"
-          href="{{&wasUsefulLinkNo}}"
-        >
-          Non
-        </mj-button>
-      </mj-column>
-    </mj-section>
-    {{> footer}}}
-  </mj-body>
-</mjml>
+        <br />
+        <span
+          >Nous aimerions savoir si cette simulation vous a été utile, et si
+          elle vous a permis de demander voire de bénéficier de nouvelles aides
+          : cela nous permettra de continuer à améliorer le simulateur !
+        </span>
+      </p>
+    </mj-text>
+  </mj-column>
+</mj-section>
+<mj-section>
+  <mj-text align="center" font-size="20px">
+    Votre simulation a-t-elle été utile ?
+  </mj-text>
+</mj-section>
+<mj-section>
+  <mj-column align="center">
+    <mj-button
+      width="130px"
+      background-color="#5770be"
+      color="white"
+      href="{{&wasUsefulLinkYes}}"
+    >
+      Oui
+    </mj-button>
+  </mj-column>
+  <mj-column>
+    <mj-button
+      width="130px"
+      background-color="#5770be"
+      color="white"
+      href="{{&wasUsefulLinkNo}}"
+    >
+      Non
+    </mj-button>
+  </mj-column>
+</mj-section>
