update: prise en compte du format mobile

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -386,6 +386,7 @@
   gap: 16px;
 }
 
-.aj-iframe-content .aj-main-container {
+.aj-iframe-content .aj-main-container,
+.aj-iframe-content .aj-fr-col-12 {
   min-height: 0vh !important;
 }
