Corrige l'affichage de l'iframe (#3534)
* fix: corrige l'affichage de l'iframe et un bug de redirection

* update: prise en compte du format mobile

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -385,3 +385,8 @@
   align-items: center;
   gap: 16px;
 }
+
+.aj-iframe-content .aj-main-container,
+.aj-iframe-content .aj-fr-col-12 {
+  min-height: 0vh !important;
+}
