--- a/backend/lib/mes-aides/emails/templates/simulation-results.mjml
+++ b/backend/lib/mes-aides/emails/templates/simulation-results.mjml
@@ -1,146 +1,87 @@
-<mjml>
-  <mj-head>
-    <mj-attributes>
-      <mj-text color="#555" line-height="22px" font-size="14px" />
-    </mj-attributes>
-  </mj-head>
-  <mj-body background-color="#F8F8F8">
-    <mj-section padding="0px 24px">
-      <mj-group>
-        <mj-column>
-          <mj-image
-            padding-left="0px"
-            alt="Logo Marianne de la République Française"
-            src="{{&baseURL}}/img/logo_rf.png"
-          />
-        </mj-column>
-        <mj-column>
-          <mj-image
-            padding-right="0px"
-            alt="Logo de 1jeune1solution.gouv.fr"
-            src="{{&baseURL}}/img/logo1j1s-france-relance.png"
-          />
-        </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section padding="0px 24px">
-      <mj-column>
-        <mj-text padding="0px">
-          <p>
-            <span
-              >Vous avez récemment utilisé le simulateur de
-              <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
-                >1jeune1solution.gouv.fr</a
-              >.
-            </span>
-            <br />
-            <span
-              >D'après la situation que vous avez décrite, vous êtes a priori
-              éligible aux aides suivantes :</span
-            >
-          </p>
-        </mj-text>
-      </mj-column>
-    </mj-section>
+<mj-section padding="0px 24px">
+  <mj-column>
+    <mj-text padding="0px">
+      <p>
+        <span
+          >Vous avez récemment utilisé le simulateur de
+          <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
+            >1jeune1solution.gouv.fr</a
+          >.
+        </span>
+        <br />
+        <span
+          >D'après la situation que vous avez décrite, vous êtes a priori
+          éligible aux aides suivantes :</span
+        >
+      </p>
+    </mj-text>
+  </mj-column>
+</mj-section>
 
-    {{#droits}}
-    <mj-wrapper padding="16px 0px 0px 0px">
+{{#droits}}
+<mj-wrapper padding="16px 0px 0px 0px">
+  <mj-section padding="0px">
+    <mj-column width="556px" background-color="#FFFFFF" padding="16px">
       <mj-section padding="0px">
-        <mj-column width="556px" background-color="#FFFFFF" padding="16px">
-          <mj-section padding="0px">
-            <mj-group padding="0px">
-              <mj-column width="20%" vertical-align="middle">
-                <mj-image
-                  alt="{{institution.label}}"
-                  width="60px"
-                  align="left"
-                  padding="0px"
-                  src="{{&baseURL}}{{&imgSrc}}"
-                />
-              </mj-column>
-              <mj-column vertical-align="middle" width="60%">
-                <mj-text align="left" padding="0px 16px">
-                  <strong>{{droitLabel}}</strong>
-                </mj-text>
-              </mj-column>
-              <mj-column vertical-align="middle" width="20%">
-                <mj-text align="right" padding="0px">
-                  <strong>{{montant}}</strong>
-                </mj-text>
-              </mj-column>
-            </mj-group>
-          </mj-section>
-          <mj-section padding="0px">
-            <mj-column width="100%" vertical-align="middle" padding="0px">
-              <mj-divider
-                border-width="1px"
-                border-style="solid"
-                border-color="#E7E7E7"
-                padding="16px 0px"
-              />
-            </mj-column>
-          </mj-section>
-          <mj-section padding="0">
-            <mj-column width="100%">
-              <mj-text padding="0px">{{&description}}</mj-text>
-            </mj-column>
-            <mj-column width="100%" padding="0">
-              <mj-button
-                align="left"
-                background-color="#5770be"
-                color="white"
-                href="{{&ctaLink}}"
-                padding="16px 0px 0px 0px"
-              >
-                {{ctaLabel}}
-              </mj-button>
-            </mj-column>
-          </mj-section>
+        <mj-group padding="0px">
+          <mj-column width="20%" vertical-align="middle">
+            <mj-image
+              alt="{{institution.label}}"
+              width="60px"
+              align="left"
+              padding="0px"
+              src="{{&baseURL}}{{&imgSrc}}"
+            />
+          </mj-column>
+          <mj-column vertical-align="middle" width="60%">
+            <mj-text align="left" padding="0px 16px">
+              <strong>{{benefitLabel}}</strong>
+            </mj-text>
+          </mj-column>
+          <mj-column vertical-align="middle" width="20%">
+            <mj-text align="right" padding="0px">
+              <strong>{{montant}}</strong>
+            </mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section padding="0px">
+        <mj-column width="100%" vertical-align="middle" padding="0px">
+          <mj-divider
+            border-width="1px"
+            border-style="solid"
+            border-color="#E7E7E7"
+            padding="16px 0px"
+          />
         </mj-column>
       </mj-section>
-    </mj-wrapper>
-    {{/droits}}
-    <mj-section padding="0px 24px">
-      <mj-column width="100%" vertical-align="middle" padding="0px">
-        <mj-divider
-          border-width="1px"
-          border-style="solid"
-          border-color="#E7E7E7"
-          padding="32px 0px"
-        />
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0px 24px">
-      <mj-column padding="0px">
-        <mj-text padding="0px">
-          <span
-            >Retrouvez les détails de votre simulation en cliquant
-            <a href="{{&returnURL}}" target="_blank">ici</a>.
-          </span>
-          <br />
-          <span
-            >Nous améliorons ce simulateur en continu, et vous pouvez nous y
-            aider.
-          </span>
-          <br />
-          <span
-            >Vous pouvez toujours nous contacter à l'adresse suivante :
-            <a href="mailto:aides-jeunes@beta.gouv.fr"
-              >aides-jeunes@beta.gouv.fr</a
-            >
-          </span>
-        </mj-text>
-        <mj-text padding="16px 0px">
-          <span>Bonne journée,</span>
-          <br />
-          <span
-            >L'équipe du
-            <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
-              >simulateur de 1jeune1solution.gouv.fr</a
-            >
-          </span>
-        </mj-text>
-      </mj-column>
-    </mj-section>
-  </mj-body>
-</mjml>
+      <mj-section padding="0">
+        <mj-column width="100%">
+          <mj-text padding="0px">{{&description}}</mj-text>
+        </mj-column>
+        <mj-column width="100%" padding="0">
+          <mj-button
+            align="left"
+            background-color="#5770be"
+            color="white"
+            href="{{&ctaLink}}"
+            padding="16px 0px 0px 0px"
+          >
+            {{ctaLabel}}
+          </mj-button>
+        </mj-column>
+      </mj-section>
+    </mj-column>
+  </mj-section>
+</mj-wrapper>
+{{/droits}}
+<mj-section padding="0px 24px">
+  <mj-column width="100%" vertical-align="middle" padding="0px">
+    <mj-divider
+      border-width="1px"
+      border-style="solid"
+      border-color="#E7E7E7"
+      padding="32px 0px"
+    />
+  </mj-column>
+</mj-section>
