--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -73,6 +73,7 @@
 
 .fr-btn {
   text-align: center;
+  max-width: 100% !important; // todo : remove !important when it's possible
 }
 
 .fr-btn--icon-center {
@@ -150,11 +151,6 @@
   height: 100%;
   max-height: 600px;
   margin: auto;
-}
-
-.fr-btn.fr-btn--icon-left,
-.fr-btn.fr-icon-mail-line {
-  max-width: 100% !important;
 }
 
 .aj-benefit-header {
