--- a/backend/lib/mes-aides/emails/templates/pricing-notification.mjml
+++ b/backend/lib/mes-aides/emails/templates/pricing-notification.mjml
@@ -7,25 +7,17 @@
           <a href="https://mes-aides.1jeune1solution.beta.gouv.fr/"
             >1jeune1solution.gouv.fr</a
           >
-          et vous avez accepté d’être recontacté·e. >.</span
+          et vous avez accepté d’être recontacté·e.</span
         >
         <br /><br />
         <span
           >En tant que personne inscrite à Pôle emploi, vous bénéficiez d’un
           abonnement pass pass à 5€ / mois (au lieu de 28€ / mois) pour vous
-          déplacer en illimité bus et TER sur tout le réseau TADAO.
-        </span>
-        <br /><br />
-        <span
-          >Pour accéder aux instructions, rendez-vous sur
+          déplacer en illimité bus et TER sur tout le réseau TADAO. Pour accéder
+          aux instructions, rendez-vous sur
           <a href="https://www.tadao.fr/713-Demandeur-d-emploi.html">
             le site de TADAO.</a
           >
-        </span>
-        <br /><br />
-        <span>
-          Nous vous écrivons dans le cadre d’une expérimentation. Si vous
-          souhaitez contribuer à nos travaux, vous pouvez répondre à cet email.
         </span>
       </p>
     </mj-text>
