--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -379,6 +379,11 @@
   gap: 16px;
 }
 
+.aj-iframe-content .aj-main-container,
+.aj-iframe-content .aj-fr-col-12 {
+  min-height: 0vh;
+}
+
 .aj-iframe-tracking-optout {
   border-width: 0px;
   overflow: hidden;
