--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -73,7 +73,7 @@
 
 .fr-btn {
   text-align: center;
-  max-width: 100% !important; // todo : remove !important when it's possible
+  max-width: 100% !important;
 }
 
 .fr-btn--icon-center {
@@ -219,7 +219,7 @@
   .aj-main-container {
     flex: 1;
     display: flex;
-    flex-direction: column !important; // todo : remove !important when it's possible
+    flex-direction: column !important;
     min-height: 0;
   }
 
@@ -252,7 +252,7 @@
   }
 
   [data-text]:after {
-    display: none !important; // todo : remove !important when it's possible
+    display: none !important;
   }
   .fr-sidemenu__inner {
     min-height: 0;
@@ -306,7 +306,7 @@
 }
 
 .fr-radio-group label {
-  min-height: 50px !important; // todo : remove !important when it's possible
+  min-height: 50px !important;
 }
 
 .fr-modal--large .fr-modal__content {
