--- a/tools/views/index.html
+++ b/tools/views/index.html
@@ -31,8 +31,8 @@
                 >Mail de sondage d'utilité de la simulation
                 (simulation-usefulness) :
               </span>
-              <span v-else-if="typeKey === 'pricing-notification'"
-                >Notification admin proactive (pricing-notification) :
+              <span v-else-if="typeKey === 'proactive-notification'"
+                >Notification admin proactive (proactive-notification) :
               </span>
               &nbsp;
               <a
