link to tab in email body

--- a/backend/lib/mes-aides/emails/templates/proactive-notification.mjml
+++ b/backend/lib/mes-aides/emails/templates/proactive-notification.mjml
@@ -13,11 +13,19 @@
         <span
           >En tant que personne inscrite à Pôle emploi, vous bénéficiez d’un
           abonnement pass pass à 5€ / mois (au lieu de 28€ / mois) pour vous
-          déplacer en illimité bus et TER sur tout le réseau TADAO. Pour accéder
-          aux instructions, rendez-vous sur
+          déplacer en illimité en bus et TER sur tout le réseau TADAO. Pour
+          accéder aux instructions, rendez-vous sur
           <a href="https://www.tadao.fr/713-Demandeur-d-emploi.html">
             le site de TADAO.</a
           >
+        </span>
+        <br /><br />
+        <span
+          >Nous vous écrivons dans le cadre d’une expérimentation. Pour en
+          savoir plus, consultez
+          <a href="https://tous-a-bord.beta.gouv.fr/"> notre site</a>
+          ou écrivez-nous à
+          <a href="mailto:tousabord@beta.gouv.fr">tousabord@beta.gouv.fr</a>.
         </span>
       </p>
     </mj-text>
