--- a/src/styles/themes/bordeaux-metropole.css
+++ b/src/styles/themes/bordeaux-metropole.css
@@ -2,17 +2,17 @@
   --demo-wrapper-background-blue: #fbf1bc;
   --text-button: #212427;
   --input-outline: #ffd95f;
-  --blue-france-sun-113-625: #ffcc2a;
-  --blue-france-sun-113-625-hover: #ffd95f;
-  --blue-france-sun-113-625-active: #d6ab22;
-  --blue-cumulus-main-526: #f0d121;
-  --blue-cumulus-925-125-hover: #cfac3d;
-  --blue-cumulus-925-125-active: #b78a2e;
-  --info-425-625: #d4af37;
-  --info-425-625-hover: #c2a032;
-  --info-425-625-active: #9e8229;
-  --info-950-100: #fbf1bc;
-  --info-950-100-hover: #e8dc9e;
-  --info-950-100-active: #96893f;
+  --main-color: #ffcc2a;
+  --main-color-hover: #ffd95f;
+  --main-color-active: #d6ab22;
+  --secondary-color: #f0d121;
+  --secondary-color-hover: #cfac3d;
+  --secondary-color-active: #b78a2e;
+  --info-main-color: #d4af37;
+  --info-main-color-hover: #c2a032;
+  --info-main-color-active: #9e8229;
+  --info-secondary-color: #fbf1bc;
+  --info-secondary-color-hover: #e8dc9e;
+  --info-secondary-color-active: #96893f;
   --border-radius: 0.3rem;
 }
