--- a/src/styles/themes/light-blue.css
+++ b/src/styles/themes/light-blue.css
@@ -2,17 +2,17 @@
   --demo-wrapper-background-blue: #a1d9e6;
   --text-button: #fff;
   --input-outline: #008080;
-  --blue-france-sun-113-625: #008391;
-  --blue-france-sun-113-625-hover: #476b70;
-  --blue-france-sun-113-625-active: #515e60;
-  --blue-cumulus-main-526: #089cb3;
-  --blue-cumulus-925-125-hover: #068194;
-  --blue-cumulus-925-125-active: #036473;
-  --info-425-625: #008391;
-  --info-425-625-hover: #35b5ff;
-  --info-425-625-active: #0074b3;
-  --info-950-100: #e1ebed;
-  --info-950-100-hover: #cad8db;
-  --info-950-100-active: #7eb8bf;
+  --main-color: #008391;
+  --main-color-hover: #476b70;
+  --main-color-active: #515e60;
+  --secondary-color: #089cb3;
+  --secondary-color-hover: #068194;
+  --secondary-color-active: #036473;
+  --info-main-color: #008391;
+  --info-main-color-hover: #35b5ff;
+  --info-main-color-active: #0074b3;
+  --info-secondary-color: #e1ebed;
+  --info-secondary-color-hover: #cad8db;
+  --info-secondary-color-active: #7eb8bf;
   --border-radius: 0.3rem;
 }
