--- a/src/styles/themes/default-dsfr.css
+++ b/src/styles/themes/default-dsfr.css
@@ -1,20 +1,18 @@
 :root {
-  /* DSFR default theme */
   --demo-wrapper-background-blue: #5770be;
   --text-button: #fff;
   --input-outline: #0a76f6;
-  --blue-france-sun-113-625: #000091;
-  --blue-france-sun-113-625-hover: #1212ff;
-  --blue-france-sun-113-625-active: #2323ff;
-  --blue-cumulus-main-526: #417dc4;
-  --blue-cumulus-925-125-hover: #a9c8fb;
-  --blue-cumulus-925-125-active: #8ab8f9;
-  --blue-cumulus-main-526: #417dc4;
-  --info-425-625: #0063cb;
-  --info-425-625-hover: #3b87ff;
-  --info-425-625-active: #6798ff;
-  --info-950-100: #e8edff;
-  --info-950-100-hover: #c2d1ff;
-  --info-950-100-active: #a9bfff;
+  --main-color: #000091;
+  --main-color-hover: #1212ff;
+  --main-color-active: #2323ff;
+  --secondary-color: #417dc4;
+  --secondary-color-hover: #a9c8fb;
+  --secondary-color-active: #8ab8f9;
+  --info-main-color: #0063cb;
+  --info-main-color-hover: #3b87ff;
+  --info-main-color-active: #6798ff;
+  --info-secondary-color: #e8edff;
+  --info-secondary-color-hover: #c2d1ff;
+  --info-secondary-color-active: #a9bfff;
   --border-radius: 0rem;
 }
