--- a/src/styles/themes/bordeaux-metropole.css
+++ b/src/styles/themes/bordeaux-metropole.css
@@ -15,4 +15,5 @@
   --info-secondary-color-hover: #e8dc9e;
   --info-secondary-color-active: #96893f;
   --border-radius: 0.3rem;
+  --font-family: "Work Sans", sans-serif;
 }
