--- a/src/styles/themes/default-dsfr.css
+++ b/src/styles/themes/default-dsfr.css
@@ -15,4 +15,5 @@
   --info-secondary-color-hover: #c2d1ff;
   --info-secondary-color-active: #a9bfff;
   --border-radius: 0rem;
+  --font-family: inherit;
 }
