--- a/src/styles/themes/light-blue.css
+++ b/src/styles/themes/light-blue.css
@@ -15,4 +15,5 @@
   --info-secondary-color-hover: #cad8db;
   --info-secondary-color-active: #7eb8bf;
   --border-radius: 0.3rem;
+  --font-family: inherit;
 }
