--- a/src/styles/themes/bordeaux-metropole.css
+++ b/src/styles/themes/bordeaux-metropole.css
@@ -1,7 +1,7 @@
 :root {
   --demo-wrapper-background-blue: #fbf1bc;
   --text-button: #212427;
-  --input-outline: #ffd95f;
+  --input-outline: #000000;
   --main-color: #ffcc2a;
   --main-color-hover: #ffd95f;
   --main-color-active: #d6ab22;
