--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -13,6 +13,8 @@
   --info-950-100: var(--info-secondary-color);
   --info-950-100-hover: var(--info-secondary-color-hover);
   --info-950-100-active: var(--info-secondary-color-active);
+  --secondary-btn-text-color: var(--main-color);
+  --secondary-btn-border-color: var(--main-color);
 }
 
 @font-face {
@@ -26,18 +28,21 @@
   font-family: var(--font-family);
 }
 
+[tabindex],
+a,
 button,
 input,
 select,
-a,
 radio,
+details,
 input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
+input[type="image"],
+input[type="radio"] + label:before,
+input[type="reset"],
+input[type="submit"],
+select,
+textarea {
   outline-color: var(--input-outline);
-}
-
-.aj-text-color {
-  color: var(--text-button);
 }
 
 .fr-fieldset {
@@ -112,6 +117,7 @@ input[type="radio"] + label:before {
   text-align: center;
   max-width: 100% !important;
   border-radius: var(--border-radius);
+  color: var(--main-btn-text-color);
 }
 
 .fr-btn--icon-center {
@@ -123,6 +129,11 @@ input[type="radio"] + label:before {
   --active: var(--background-disabled-grey);
   background-color: var(--background-disabled-grey);
   color: var(--text-disabled-grey);
+}
+
+.fr-btn--secondary {
+  box-shadow: inset 0 0 0 1px var(--secondary-btn-border-color);
+  color: var(--secondary-btn-text-color);
 }
 
 .fr-fieldset__content {
