Ajoute un lien dans le footer et une route pour afficher le contenu HTML d'un email en ligne

--- a/backend/lib/mes-aides/emails/templates/footer.mjml
+++ b/backend/lib/mes-aides/emails/templates/footer.mjml
@@ -28,5 +28,11 @@
         ></span
       >
     </mj-text>
+    <mj-text>
+      <span
+        >Accédez à une version en ligne de cet email en cliquant
+        <a href="{{&emailRenderURL}}" target="_blank">ici</a>.</span
+      >
+    </mj-text>
   </mj-column>
 </mj-section>
